# EN.705.623.81.SU26

./: Discussion1.md  Discussion2.ipynb  Discussion3.ipynb  Discussion4.ipynb  Discussion5.ipynb  Discussion6.ipynb  Discussion7.ipynb  Discussion8.ipynb  Discussion9.ipynb  HW1.html  HW1.ipynb  HW2.html  HW2.ipynb  HW2_broken.ipynb  HW3.ipynb  README.md  main.py  pyproject.toml
