[project]
name = "ai-algorithms-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "gymnasium>=1.2.3",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "ortools>=9.15.6755",
    "pandas>=2.3.3",
    "pyswarms>=1.3.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.6",
]
